<resources>
    <string name="app_name">Crypto Exchange Rates</string>
    <string name="spinner_title">Select Currency</string>
    <string name="select_currency">Select Currency</string>
    <string name="cryp_to"><b>Cryptocurrencies(ETH and BTC) to:</b></string>
    <string name="delete">DELETE</string>
    <string name="btc"><b>BTC</b></string>
    <string name="eth"><b>ETH</b></string>
    <string name="rate">Rates</string>
    <string name="heading">Cryptocurrencies in BTC and ETH to:</string>
    <string name="eth_to">In ETH:</string>
    <string name="btc_to">In BTC:</string>
    <string name="hint">Enter Amount</string>
    <string name="submit">Submit</string>
</resources>
