<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.owner.cryptoexchangerates.activities.Conversion">

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/profile_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/actual_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/cover_image"
                android:layout_width="match_parent"
                android:layout_height="@dimen/three_hundred_dp"
                android:scaleType="centerCrop"
                android:src="@drawable/cryp_img"/>

            <RelativeLayout
                android:id="@+id/background"
                android:layout_width="match_parent"
                android:layout_height="@dimen/three_hundred_dp"
                android:background="@drawable/background" />

            <LinearLayout
                android:id="@+id/my_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/background"
                android:layout_marginLeft="@dimen/twenty_dp"
                android:layout_marginStart="@dimen/twenty_dp"
                android:layout_marginTop="-100dp">

                <com.mikhaellopez.circularimageview.CircularImageView
                    android:id="@+id/countryImage"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    app:civ_border_color="@color/semiTransparentWhite"
                    app:civ_border_width="10dp"
                    tools:src="@drawable/eur"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginBottom="24dp"
                    android:layout_marginEnd="12dp"
                    android:layout_marginStart="12dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/my_rates"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rate"
                        android:textColor="@android:color/black"
                        android:textSize="20sp" />

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/crypto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/twenty_dp"
                android:layout_marginTop="24dp"
                android:text="@string/heading"
                android:textColor="#ffffff"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/currency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/crypto"
                android:layout_marginLeft="@dimen/twenty_dp"
                android:layout_marginTop="@dimen/twenty_dp"
                android:fontFamily="sans-serif-light"
                android:textColor="#ffffff"
                android:textSize="18sp"
                tools:text="Naira"/>

            <android.support.v7.widget.CardView
                android:id="@+id/card_holder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/my_layout"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="@dimen/thirty"
                android:layout_marginRight="@dimen/thirty"
                android:layout_marginTop="@dimen/twenty_dp"
                app:cardCornerRadius="@dimen/card_radius">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="bottom"
                    android:background="@color/colorPrimaryDark"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="bottom"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/btc_rates"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="@dimen/ten_dp"
                            android:fontFamily="sans-serif-light"
                            android:padding="5dp"
                            android:textColor="#ffffff"
                            android:textSize="18sp"
                            tools:text="150" />

                        <TextView
                            android:id="@+id/btc"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginBottom="@dimen/ten_dp"
                            android:padding="5dp"
                            android:text="BTC"
                            android:textColor="#ffffff"
                            android:textSize="15sp" />
                    </LinearLayout>

                    <View
                        android:layout_width="0.5dp"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="@dimen/ten_dp"
                        android:background="#ffffff" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="bottom"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/eth_rates"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="@dimen/ten_dp"
                            android:fontFamily="sans-serif-light"
                            android:padding="5dp"
                            android:textColor="#ffffff"
                            android:textSize="18sp"
                            tools:text="150" />

                        <TextView
                            android:id="@+id/eth"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginBottom="@dimen/ten_dp"
                            android:padding="5dp"
                            android:text="ETH"
                            android:textColor="#ffffff"
                            android:textSize="15sp" />
                    </LinearLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/card_holder"
                android:layout_marginBottom="@dimen/ten_dp"
                android:layout_marginLeft="@dimen/thirty"
                android:layout_marginRight="@dimen/thirty"
                android:layout_marginTop="@dimen/thirty"
                app:cardCornerRadius="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="bottom"
                    android:orientation="vertical"
                    android:paddingBottom="15dp"
                    android:paddingTop="@dimen/ten_dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:gravity="center"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="15sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/eth_to"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-light"
                            android:padding="@dimen/ten_dp"
                            android:textColor="@android:color/black"
                            android:textSize="15sp"
                            android:text="@string/eth_to"/>

                        <TextView
                            android:id="@+id/eth_amount"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-light"
                            android:padding="@dimen/ten_dp"
                            android:textColor="@android:color/black"
                            android:textSize="15sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/btc_to"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-light"
                            android:padding="@dimen/ten_dp"
                            android:textColor="@android:color/black"
                            android:textSize="15sp"
                            android:text="@string/btc_to"/>

                        <TextView
                            android:id="@+id/btc_amount"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-light"
                            android:padding="@dimen/ten_dp"
                            android:textColor="@android:color/black"
                            android:textSize="15sp"/>
                    </LinearLayout>

                    <EditText
                        android:id="@+id/amount"
                        android:padding="@dimen/ten_dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint"
                        android:inputType="number"/>

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/submit"
                        android:padding="@dimen/ten_dp"
                        android:layout_gravity="center"
                        android:textAllCaps="true"
                        android:onClick="submit"/>

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </RelativeLayout>

    </android.support.v4.widget.NestedScrollView>


</LinearLayout>
